--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/pycharm,django,python
-# Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,django,python
-
 ### Django ###
 *.log
 *.pot
@@ -309,3 +305,4 @@ fabric.properties
 # pytype static type analyzer
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,django,python
+/rpi_control/models.py
